<resources>
    <string name="app_name">知乎日报</string>

    <string name="share_this_news">分享</string>
    <string name="login">请登录</string>
    <string name="login_pop_window">登陆</string>
    <string name="login_by_zhihu">知乎账户登陆</string>
    <string name="login_by_weibo">或使用微博登陆</string>
    <string name="favorites">收藏</string>
    <string name="messages">消息</string>
    <string name="settings">设置</string>
    <string name="home_page">首页</string>
    <string name="design_news">设计日报</string>
    <string name="my_favorites">我的收藏</string>

    <string name="today_news">今日热点</string>
    <string name="share_article">分享这篇内容</string>


    <string name="wechat_friends">微信好友</string>
    <string name="wechat_share_friends">微信朋友圈</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="copy">复制链接</string>
    <string name="email">Email</string>
    <string name="youdao">有道云笔记</string>
    <string name="message">message</string>
    <string name="cancel">取消</string>
    <string name="write_comment">写点评</string>
    <string name="login_string">请登录</string>
    <string name="toast_success">已收藏</string>
    <string name="toast_give_up">取消收藏</string>
</resources>
