<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/share_wechat"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_wechat48"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_friends"
                android:gravity="center"
                android:textSize="14sp"

                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/share_wechat_moments"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_share_friedns"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_share_friends"
                android:gravity="center"
                android:textSize="14sp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/share_qq"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_qq48"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qq"
                android:gravity="center"
                android:textSize="14sp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/share_weibo"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_weibo48"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weibo"
                android:gravity="center"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/share_copy"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_copy48"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:gravity="center"
                android:textSize="14sp"

                android:id="@+id/textView"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/share_email"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_email48"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:gravity="center"
                android:textSize="14sp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/share_youdao"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_youdao48"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/youdao"
                android:gravity="center"
                android:textSize="14sp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/share_message"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_message48"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:gravity="center"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>