<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:background="@color/sliding_menu_background"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/favorites_btn"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_favorites32"
            android:padding="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:text="@string/favorites"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/messages_btn"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_messages32"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/messages"
            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/settings_btn"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting32"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />
    </LinearLayout>
</LinearLayout>